kubernetes/base-apps/network/traefik/app/middleware-forwardauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: network
spec:
  forwardAuth:
    address: >-
      http://authelia.security.svc.cluster.local/api/authz/forward-auth?authelia_url=https://auth.${cluster_domain}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Groups
      - Remote-Email
